--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -629,11 +629,12 @@ $color-for-background-calculation: #FFC736
 
     
 .eighth-section
+    margin-bottom: 80px
     &__container
         overflow: hidden
-
-.reviews
     
+
+.reviews 
     &__top-h2
         text-align: center
         color: rgb(0, 0, 0)
@@ -687,3 +688,45 @@ $color-for-background-calculation: #FFC736
             left: -1186px
             bottom: -66px
 
+
+.footer
+    background-color: #1A1D25
+    min-height: 340px
+    padding-top: 80px
+    padding-bottom: 24px
+    &__hr
+        border: 1px solid #FFFFFF14
+        margin: 0px
+        margin-bottom: 38px
+    &__flex-top
+        margin-bottom: 38px
+
+.flex-top
+    display: flex
+    justify-content: space-between
+    &__item
+        font-weight: 500
+        font-size: 17px
+        line-height: 140%
+        text-align: left
+        color: #FFFFFF80
+        &__img
+            margin-bottom: 16px
+    &_white 
+        color: #FFFFFFB3
+    
+.all-rights-reserved
+    display: flex
+    justify-content: space-between
+    align-items: center
+    &__left
+        text-align: left
+        &__p
+            font-weight: 500
+            font-size: 17px 
+            line-height: 140%
+            color: #FFFFFFB3
+    &__icons-flex
+        display: flex
+        align-items: center
+        gap: 24px
