--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -403,7 +403,7 @@ $color-for-background-calculation: #FFC736
         font-size: 17px
         font-weight: 500
         line-height: 140%
-
+/* значение для пятой секции */ 
 .fifth-section
     margin-bottom: 120px
 .mobile-version
@@ -421,23 +421,28 @@ $color-for-background-calculation: #FFC736
         line-height: 140%
         margin-bottom: 40px
 
+/* заначения для разделяющей линии между пятой (fifth-section) и шестой (sixth-section) секцией */
 .around-advantages-and-mobile-version__hr
     margin: 0 auto
     margin-bottom: 80px
     text-align: center
     width: 1392px
-
+    border: 1px solid #4E5D7C14
+    
+/* общие значения для шестой секции */
 .sixth-section
     &__container
         background-color: $color-blue
         border-radius: 16px
 
+/* значения для разделения в 2 частях, для customer-support */
 .customer-support
     display: flex
     align-items: center
     gap: 74px
+    /* левая часть customer-support */
     &__right-wrapper
-        text-align: left
+        /* правая часть customer-support */
         &__h3
             color: rgb(255, 255, 255)
             font-size: 40px
@@ -457,7 +462,8 @@ $color-for-background-calculation: #FFC736
             font-size: 17px
             font-weight: 500
             line-height: 140%
-            
+
+/* позиционирование для right-wrapper__icons-and-links (средняя часть - иконки) */            
 .icons-and-links__li
     display: flex
     align-items: center
@@ -472,9 +478,10 @@ $color-for-background-calculation: #FFC736
         font-weight: 500
         line-height: 140%
 
-
+/* значения для седьмой части */
 .seventh-section
 
+/* значения для карточек tariffs */
 .tariffs
     &__title
         text-align: center
@@ -501,6 +508,8 @@ $color-for-background-calculation: #FFC736
             font-size: 17px
             font-weight: 800
             line-height: 140%
+
+    /* небольшая модификация для 3 карточки (3 кнопки) */ 
     &__buttons-white
         padding: 12px 63px
         border-radius: 47px
@@ -524,6 +533,7 @@ $color-for-background-calculation: #FFC736
             font-weight: 500
             line-height: 140%
 
+/* значения flex для позиционирования карточек на сайте */
 .subscriptions
     display: flex
     justify-content: center
@@ -552,17 +562,20 @@ $color-for-background-calculation: #FFC736
                 font-weight: 500
                 line-height: 120%
 
+/* модификаторы для белого цвета subscriptions_white и светло - серого цвета subscriptions_white-and-gray */
 .subscriptions_white
     color: #FFFFFF
 .subscriptions_white-and-gray
     color: #FFFFFF99
 
+/* задаю значение для 3000 тысяч рублей во второй карточке (желтый фон) */
 .calculation_background
     padding: 8px 16px
     background-color: $color-for-background-calculation
     color: #FFFFFF
     border-radius: 8px
 
+/* значение для второй и третьей карточки, где идет концетрация внимания на выгоде, на самом вверху */
 .subscriptions-benefit
     display: inline-block
     background-color: $color-for-subscriptions
@@ -572,29 +585,34 @@ $color-for-background-calculation: #FFC736
     border: none
     margin-bottom: 16px
 
+/* padding для позиционирования внутри первой карточки */
 .subscriptions_padding_first
     padding: 93px 40px 48px 
     border: 1px solid gray
     border-radius: 8px
+/* padding для позиционирования внутри второй карточки */
 .subscriptions_padding_second
     padding: 48px 40px
     border: 1px solid gray
     border-radius: 8px
+/* padding для позиционирования внутри третьей карточки */
 .subscriptions_padding_third
     padding: 48px 38px 48px 40px
     background-color: $color-blue
     border-radius: 8px
     
-
+/* значения margin для p тегов в subscriptions */
 .subscriptions_p-32
     margin-bottom: 32px
 .subscriptions_p-50
     margin-bottom: 50px
 
+/* обнуление, чтобы исправить "схлопывия margin" */
 .calculation_last
     margin: 0px
     margin-bottom: 40px
 
+/* значения margin для p тегов в calculation для первой карточки */
 .calculation_margin28px
     margin-right: 28px
 .calculation_margin72px
@@ -602,6 +620,7 @@ $color-for-background-calculation: #FFC736
 .calculation_margin20px
     margin-right: 20px
 
+/* значения margin для p тегов в calculation для второй карточки */
 .calculation_margin27px
     margin-right: 27px
 .calculation_margin55px
@@ -609,6 +628,7 @@ $color-for-background-calculation: #FFC736
 .calculation_margin19px
     margin-right: 19px
 
+/* значения margin для p тегов в calculation для третьей карточки */
 .calculation_margin40px
     margin-right: 40px
 .calculation_margin67px
@@ -616,24 +636,25 @@ $color-for-background-calculation: #FFC736
 .calculation_margin32px
     margin-right: 32px
 
-.calculation__h3
+/* значения для разделительной линия между subscriptions__items__calculation */
+.calculation__hr
     color: #4E5D7C14
     width: 289px
     margin: 0px
     margin-bottom: 16px
-.calculation__h3__for-calculation_background
+/* значения для разделительной лении, как модификатор (calculation__hr), для отступа с subscriptions-benefit */ 
+.calculation__hr__for-calculation_background
     color: #4E5D7C14
     width: 289px
     margin: 0px
     margin-bottom: 8px
 
-    
+/* значения для восьмой секции (восьмая секция) */
 .eighth-section
     margin-bottom: 80px
     &__container
         overflow: hidden
-    
-
+/* занчение для шапки восьмой секции */  
 .reviews 
     &__top-h2
         text-align: center
@@ -642,6 +663,7 @@ $color-for-background-calculation: #FFC736
         font-weight: 600
         line-height: 120%
         margin-bottom: 40px
+    /* значения для reviews-flex внутри решил разместить левую часть (текст отзыва ИФ и должность) и правую часть (фото девушки кто написал отзыв) */ 
     &-flex
         display: flex
         justify-content: center
@@ -649,7 +671,7 @@ $color-for-background-calculation: #FFC736
         &__left-wrapper
             padding: 120px 0px 113px 104px
             width: 1159px
-
+    /* левая часть reviews-flex с текстом отзыва */
     &-left
         text-align: left
         background-color: $color-blue
@@ -666,6 +688,7 @@ $color-for-background-calculation: #FFC736
             font-size: 17px
             font-weight: 700
             line-height: 140%
+    /* значения для правой часть reviews-flex с фотографией девушки и иконками (стрелочки для переключения отзывов) */
     &-right
         position: relative
         &__img
@@ -688,7 +711,7 @@ $color-for-background-calculation: #FFC736
             left: -1186px
             bottom: -66px
 
-
+/* значения для нижней часть (footer) сайта, где есть переход по ресурсам на сайте (документация) */
 .footer
     background-color: #1A1D25
     min-height: 340px
@@ -700,7 +723,7 @@ $color-for-background-calculation: #FFC736
         margin-bottom: 38px
     &__flex-top
         margin-bottom: 38px
-
+/* значения для верхней уровень footer (документация) */
 .flex-top
     display: flex
     justify-content: space-between
@@ -714,7 +737,7 @@ $color-for-background-calculation: #FFC736
             margin-bottom: 16px
     &_white 
         color: #FFFFFFB3
-    
+/* значения для нижнего уровеня footer (права защищены и иконки банковский карт) */   
 .all-rights-reserved
     display: flex
     justify-content: space-between
