--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -16,8 +16,8 @@
 
 /* общие значения для первой секции (отступы и flex-сы) */
 .main-section {
-  min-height: 846px;
   background-color: #357EFE;
+  min-width: 1396px;
   padding-top: 40px;
   overflow: hidden;
 }
@@ -116,7 +116,7 @@
 /* общие значения для второй секции (отступы) */
 .second-section {
   background-color: #FFFFFF;
-  overflow: hidden;
+  min-width: 1396px;
 }
 .second-section__functions {
   margin-bottom: 144px;
@@ -291,6 +291,7 @@
 /* общие значения для третьей секции */ 
 .third-section {
   background-color: #357EFE;
+  min-width: 1396px;
 }
 .third-section__img {
   margin-bottom: 64px;
@@ -419,6 +420,7 @@
 .fourth-section {
   padding-top: 120px;
   margin-bottom: 80px;
+  min-width: 1396px;
 }
 
 /* является "родителем" по отношению к advantages-flex__servers servers, advantages-flex__encryption encryption и advantages-flex__data-protection */
@@ -495,6 +497,7 @@
 /* значение для пятой секции */ 
 .fifth-section {
   margin-bottom: 120px;
+  min-width: 1396px;
 }
 
 .mobile-version {
@@ -525,6 +528,9 @@
 }
 
 /* общие значения для шестой секции */
+.sixth-section {
+  min-width: 1396px;
+}
 .sixth-section__container {
   background-color: #357EFE;
   border-radius: 16px;
@@ -584,6 +590,10 @@
 }
 
 /* значения для седьмой части */
+.seventh-section {
+  min-width: 1396px;
+}
+
 /* значения для карточек tariffs */
 .tariffs {
   /* небольшая модификация для 3 карточки (3 кнопки) */ 
@@ -803,6 +813,7 @@
 /* значения для восьмой секции (восьмая секция) */
 .eighth-section {
   margin-bottom: 80px;
+  min-width: 1396px;
 }
 .eighth-section__container {
   overflow: hidden;
@@ -879,9 +890,9 @@
 /* значения для нижней часть (footer) сайта, где есть переход по ресурсам на сайте (документация) */
 .footer {
   background-color: #1A1D25;
-  min-height: 340px;
   padding-top: 80px;
   padding-bottom: 24px;
+  min-width: 1396px;
 }
 .footer__hr {
   border: 1px solid rgba(255, 255, 255, 0.0784313725);
@@ -930,4 +941,25 @@
   display: flex;
   align-items: center;
   gap: 24px;
+}
+
+@media (max-width: 1199px) {
+  .container {
+    width: 960px;
+  }
+}
+@media (max-width: 991px) {
+  .container {
+    width: 720px;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    width: 540px;
+  }
+}
+@media (max-width: 575px) {
+  .container {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
