--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -18,8 +18,8 @@ $color-for-background-calculation: #FFC736
 
 /* общие значения для первой секции (отступы и flex-сы) */
 .main-section
-    min-height: 846px
     background-color: #357EFE
+    min-width: 1396px
     padding-top: 40px
     overflow: hidden
     &__header
@@ -99,7 +99,7 @@ $color-for-background-calculation: #FFC736
 /* общие значения для второй секции (отступы) */
 .second-section
     background-color: #FFFFFF
-    overflow: hidden
+    min-width: 1396px
     &__functions
         margin-bottom: 144px
     &__statistics
@@ -238,6 +238,7 @@ $color-for-background-calculation: #FFC736
 /* общие значения для третьей секции */ 
 .third-section
     background-color: $color-blue
+    min-width: 1396px
     &__img
         margin-bottom: 64px
         
@@ -345,6 +346,7 @@ $color-for-background-calculation: #FFC736
 .fourth-section
     padding-top: 120px
     margin-bottom: 80px 
+    min-width: 1396px
 
 /* является "родителем" по отношению к advantages-flex__servers servers, advantages-flex__encryption encryption и advantages-flex__data-protection */
 .advantages-flex
@@ -406,6 +408,7 @@ $color-for-background-calculation: #FFC736
 /* значение для пятой секции */ 
 .fifth-section
     margin-bottom: 120px
+    min-width: 1396px
 .mobile-version
     text-align: center
     &__h3
@@ -431,6 +434,7 @@ $color-for-background-calculation: #FFC736
     
 /* общие значения для шестой секции */
 .sixth-section
+    min-width: 1396px
     &__container
         background-color: $color-blue
         border-radius: 16px
@@ -480,6 +484,7 @@ $color-for-background-calculation: #FFC736
 
 /* значения для седьмой части */
 .seventh-section
+    min-width: 1396px
 
 /* значения для карточек tariffs */
 .tariffs
@@ -652,6 +657,7 @@ $color-for-background-calculation: #FFC736
 /* значения для восьмой секции (восьмая секция) */
 .eighth-section
     margin-bottom: 80px
+    min-width: 1396px
     &__container
         overflow: hidden
 /* занчение для шапки восьмой секции */  
@@ -714,9 +720,9 @@ $color-for-background-calculation: #FFC736
 /* значения для нижней часть (footer) сайта, где есть переход по ресурсам на сайте (документация) */
 .footer
     background-color: #1A1D25
-    min-height: 340px
     padding-top: 80px
     padding-bottom: 24px
+    min-width: 1396px
     &__hr
         border: 1px solid #FFFFFF14
         margin: 0px
@@ -753,3 +759,20 @@ $color-for-background-calculation: #FFC736
         display: flex
         align-items: center
         gap: 24px
+
+@media (max-width: 1199px )
+    .container
+        width: 960px
+
+@media (max-width: 991px )
+    .container
+        width: 720px
+ 
+@media (max-width: 767px )
+    .container
+        width: 540px
+
+@media (max-width: 575px )
+    .container
+        width: 100%
+    
