--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -10,14 +10,15 @@
 /* импотировал шрифт Inter из google fonts */
 /* задал общий контейнер для всех блоков для позиционирования на сайте */
 .container {
-  width: 1392px;
+  width: 100%;
+  max-width: 1392px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
 /* общие значения для первой секции (отступы и flex-сы) */
 .main-section {
   background-color: #357EFE;
-  min-width: 1396px;
   padding-top: 40px;
   overflow: hidden;
 }
@@ -116,7 +117,6 @@
 /* общие значения для второй секции (отступы) */
 .second-section {
   background-color: #FFFFFF;
-  min-width: 1396px;
 }
 .second-section__functions {
   margin-bottom: 144px;
@@ -291,7 +291,6 @@
 /* общие значения для третьей секции */ 
 .third-section {
   background-color: #357EFE;
-  min-width: 1396px;
 }
 .third-section__img {
   margin-bottom: 64px;
@@ -420,7 +419,6 @@
 .fourth-section {
   padding-top: 120px;
   margin-bottom: 80px;
-  min-width: 1396px;
 }
 
 /* является "родителем" по отношению к advantages-flex__servers servers, advantages-flex__encryption encryption и advantages-flex__data-protection */
@@ -497,7 +495,6 @@
 /* значение для пятой секции */ 
 .fifth-section {
   margin-bottom: 120px;
-  min-width: 1396px;
 }
 
 .mobile-version {
@@ -528,9 +525,6 @@
 }
 
 /* общие значения для шестой секции */
-.sixth-section {
-  min-width: 1396px;
-}
 .sixth-section__container {
   background-color: #357EFE;
   border-radius: 16px;
@@ -540,6 +534,7 @@
 .customer-support {
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
   gap: 74px;
   /* левая часть customer-support */
 }
@@ -590,10 +585,6 @@
 }
 
 /* значения для седьмой части */
-.seventh-section {
-  min-width: 1396px;
-}
-
 /* значения для карточек tariffs */
 .tariffs {
   /* небольшая модификация для 3 карточки (3 кнопки) */ 
@@ -813,7 +804,6 @@
 /* значения для восьмой секции (восьмая секция) */
 .eighth-section {
   margin-bottom: 80px;
-  min-width: 1396px;
 }
 .eighth-section__container {
   overflow: hidden;
@@ -892,7 +882,6 @@
   background-color: #1A1D25;
   padding-top: 80px;
   padding-bottom: 24px;
-  min-width: 1396px;
 }
 .footer__hr {
   border: 1px solid rgba(255, 255, 255, 0.0784313725);
@@ -941,25 +930,4 @@
   display: flex;
   align-items: center;
   gap: 24px;
-}
-
-@media (max-width: 1199px) {
-  .container {
-    width: 960px;
-  }
-}
-@media (max-width: 991px) {
-  .container {
-    width: 720px;
-  }
-}
-@media (max-width: 767px) {
-  .container {
-    width: 540px;
-  }
-}
-@media (max-width: 575px) {
-  .container {
-    width: 100%;
-  }
 }/*# sourceMappingURL=style.css.map */
