--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -13,13 +13,14 @@ $color-for-background-calculation: #FFC736
 
 /* задал общий контейнер для всех блоков для позиционирования на сайте */
 .container
-    width: 1392px
+    width: 100%
+    max-width: 1392px
+    padding: 0 15px
     margin: 0 auto
 
 /* общие значения для первой секции (отступы и flex-сы) */
 .main-section
     background-color: #357EFE
-    min-width: 1396px
     padding-top: 40px
     overflow: hidden
     &__header
@@ -99,7 +100,6 @@ $color-for-background-calculation: #FFC736
 /* общие значения для второй секции (отступы) */
 .second-section
     background-color: #FFFFFF
-    min-width: 1396px
     &__functions
         margin-bottom: 144px
     &__statistics
@@ -238,7 +238,6 @@ $color-for-background-calculation: #FFC736
 /* общие значения для третьей секции */ 
 .third-section
     background-color: $color-blue
-    min-width: 1396px
     &__img
         margin-bottom: 64px
         
@@ -346,7 +345,6 @@ $color-for-background-calculation: #FFC736
 .fourth-section
     padding-top: 120px
     margin-bottom: 80px 
-    min-width: 1396px
 
 /* является "родителем" по отношению к advantages-flex__servers servers, advantages-flex__encryption encryption и advantages-flex__data-protection */
 .advantages-flex
@@ -408,7 +406,6 @@ $color-for-background-calculation: #FFC736
 /* значение для пятой секции */ 
 .fifth-section
     margin-bottom: 120px
-    min-width: 1396px
 .mobile-version
     text-align: center
     &__h3
@@ -434,7 +431,6 @@ $color-for-background-calculation: #FFC736
     
 /* общие значения для шестой секции */
 .sixth-section
-    min-width: 1396px
     &__container
         background-color: $color-blue
         border-radius: 16px
@@ -443,6 +439,7 @@ $color-for-background-calculation: #FFC736
 .customer-support
     display: flex
     align-items: center
+    justify-content: space-evenly
     gap: 74px
     /* левая часть customer-support */
     &__right-wrapper
@@ -484,8 +481,6 @@ $color-for-background-calculation: #FFC736
 
 /* значения для седьмой части */
 .seventh-section
-    min-width: 1396px
-
 /* значения для карточек tariffs */
 .tariffs
     &__title
@@ -657,7 +652,6 @@ $color-for-background-calculation: #FFC736
 /* значения для восьмой секции (восьмая секция) */
 .eighth-section
     margin-bottom: 80px
-    min-width: 1396px
     &__container
         overflow: hidden
 /* занчение для шапки восьмой секции */  
@@ -722,7 +716,6 @@ $color-for-background-calculation: #FFC736
     background-color: #1A1D25
     padding-top: 80px
     padding-bottom: 24px
-    min-width: 1396px
     &__hr
         border: 1px solid #FFFFFF14
         margin: 0px
@@ -760,19 +753,9 @@ $color-for-background-calculation: #FFC736
         align-items: center
         gap: 24px
 
-@media (max-width: 1199px )
-    .container
-        width: 960px
 
-@media (max-width: 991px )
-    .container
-        width: 720px
- 
-@media (max-width: 767px )
-    .container
-        width: 540px
 
-@media (max-width: 575px )
-    .container
-        width: 100%
+
+  
+
     
