--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -15,11 +15,11 @@ $color-for-background-calculation: #FFC736
 .container
     width: 100%
     max-width: 1392px
-    padding: 0 15px
     margin: 0 auto
 
 /* общие значения для первой секции (отступы и flex-сы) */
 .main-section
+    position: relative
     background-color: #357EFE
     padding-top: 40px
     overflow: hidden
@@ -29,22 +29,20 @@ $color-for-background-calculation: #FFC736
         align-items: center
         margin-bottom: 113px
     &__text-and-logo
+        position: relative
         display: flex
         justify-content: center
         margin-bottom: 80px
+        z-index: 1
     &__finance
         margin-bottom: 40px
     &__try-for-free
         margin-bottom: 80px
         /* ниже значения для большого прямоугольника (превая секция) */
-    &__reg
+    &__gt
         position: absolute
-        width: 2312px
-        height: 312px
-        right: -300px
-        top: 550px
-        background-color: #FFFFFF
-        transform: rotate(-7.00deg)
+        bottom: -300px
+        left: -300px
         z-index: 0
 
 /* занчения для навигационного меню в первой секции */
@@ -87,16 +85,7 @@ $color-for-background-calculation: #FFC736
             text-decoration: none
             color: $color-blue
 /* значения для фото, где компьютер и наложенный внутри интерфейс (правая часть средней секции) */
-.computer-logo
-    position: relative
-    &__outside
-        position: relative
-        z-index: 1
-    &__inside
-        position: absolute
-        right: 125px
-        top: 36px
-        z-index: 2
+
 /* общие значения для второй секции (отступы) */
 .second-section
     background-color: #FFFFFF
@@ -285,18 +274,11 @@ $color-for-background-calculation: #FFC736
         width: 410px
         height: 501px
         z-index: 1
-        left: 300px
+        left: 285px
     &__index-2
         position: absolute
         z-index: 2
-        left: 657px
-    &__icon-left-3
-        position: absolute
-        z-index: 3
-    &__icon-right-3
-        position: absolute
-        z-index: 3
-        left: 718px
+        left: 643px
 
 /* значения для third-section__time-saving (flex) */
 .comparison-with-excel
@@ -753,9 +735,20 @@ $color-for-background-calculation: #FFC736
         align-items: center
         gap: 24px
 
+@media (max-width: 1199px )
+    .container
+        width: 960px
 
+@media (max-width: 991px )
+    .container
+        width: 720px
 
+@media (max-width: 767px )
+    .container
+        width: 540px
 
-  
+@media (max-width: 575px )
+    .container
+        width: 100%
 
     
