--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -12,12 +12,12 @@
 .container {
   width: 100%;
   max-width: 1392px;
-  padding: 0 15px;
   margin: 0 auto;
 }
 
 /* общие значения для первой секции (отступы и flex-сы) */
 .main-section {
+  position: relative;
   background-color: #357EFE;
   padding-top: 40px;
   overflow: hidden;
@@ -29,9 +29,11 @@
   margin-bottom: 113px;
 }
 .main-section__text-and-logo {
+  position: relative;
   display: flex;
   justify-content: center;
   margin-bottom: 80px;
+  z-index: 1;
 }
 .main-section__finance {
   margin-bottom: 40px;
@@ -40,14 +42,10 @@
   margin-bottom: 80px;
   /* ниже значения для большого прямоугольника (превая секция) */
 }
-.main-section__reg {
+.main-section__gt {
   position: absolute;
-  width: 2312px;
-  height: 312px;
-  right: -300px;
-  top: 550px;
-  background-color: #FFFFFF;
-  transform: rotate(-7deg);
+  bottom: -300px;
+  left: -300px;
   z-index: 0;
 }
 
@@ -100,20 +98,6 @@
 }
 
 /* значения для фото, где компьютер и наложенный внутри интерфейс (правая часть средней секции) */
-.computer-logo {
-  position: relative;
-}
-.computer-logo__outside {
-  position: relative;
-  z-index: 1;
-}
-.computer-logo__inside {
-  position: absolute;
-  right: 125px;
-  top: 36px;
-  z-index: 2;
-}
-
 /* общие значения для второй секции (отступы) */
 .second-section {
   background-color: #FFFFFF;
@@ -347,21 +331,12 @@
   width: 410px;
   height: 501px;
   z-index: 1;
-  left: 300px;
+  left: 285px;
 }
 .time-saving__intermediate-level__index-2 {
   position: absolute;
   z-index: 2;
-  left: 657px;
-}
-.time-saving__intermediate-level__icon-left-3 {
-  position: absolute;
-  z-index: 3;
-}
-.time-saving__intermediate-level__icon-right-3 {
-  position: absolute;
-  z-index: 3;
-  left: 718px;
+  left: 643px;
 }
 
 /* значения для third-section__time-saving (flex) */
@@ -930,4 +905,25 @@
   display: flex;
   align-items: center;
   gap: 24px;
+}
+
+@media (max-width: 1199px) {
+  .container {
+    width: 960px;
+  }
+}
+@media (max-width: 991px) {
+  .container {
+    width: 720px;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    width: 540px;
+  }
+}
+@media (max-width: 575px) {
+  .container {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
