--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -19,6 +19,7 @@ $color-for-background-calculation: #FFC736
 
 /* общие значения для первой секции (отступы и flex-сы) */
 .main-section
+    position: relative
     background-color: #357EFE
     padding-top: 40px
     overflow: hidden
@@ -38,10 +39,10 @@ $color-for-background-calculation: #FFC736
         /* ниже значения для большого прямоугольника (превая секция) */
     &__reg
         position: absolute
-        min-width: 2312px
+        width: 110%
+        top: 730px
+        left: -159px
         height: 312px
-        right: -300px
-        top: 550px
         background-color: #FFFFFF
         transform: rotate(-7.00deg)
         z-index: 0
@@ -86,16 +87,10 @@ $color-for-background-calculation: #FFC736
             text-decoration: none
             color: $color-blue
 /* значения для фото, где компьютер и наложенный внутри интерфейс (правая часть средней секции) */
-.computer-logo
+.right-finance__img
     position: relative
-    &__outside
-        position: relative
-        z-index: 1
-    &__inside
-        position: absolute
-        right: 125px
-        top: 36px
-        z-index: 2
+    width: 100%
+    z-index: 2
 /* общие значения для второй секции (отступы) */
 .second-section
     background-color: #FFFFFF
@@ -289,13 +284,6 @@ $color-for-background-calculation: #FFC736
         position: absolute
         z-index: 2
         left: 643px
-    &__icon-left-3
-        position: absolute
-        z-index: 3
-    &__icon-right-3
-        position: absolute
-        z-index: 3
-        left: 705px
 
 /* значения для third-section__time-saving (flex) */
 .comparison-with-excel
@@ -425,7 +413,7 @@ $color-for-background-calculation: #FFC736
     margin: 0 auto
     margin-bottom: 80px
     text-align: center
-    width: 1392px
+    min-width: 1392px
     border: 1px solid #4E5D7C14
     
 /* общие значения для шестой секции */
@@ -753,5 +741,22 @@ $color-for-background-calculation: #FFC736
         gap: 24px
 
 
+@media ( max-width: 1199px)
+    .container
+        width: 100%
+        width: 960px
+        padding: 0 20px
+        margin: 0 auto
+
+@media ( max-width: 991px )
+    .container
+        width: 720px
     
+@media ( max-width: 767px)
+    .container
+        width: 540px
+
+@media ( max-width: 575px )
+    .container
+        width: 100%   
     
