--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 113px;
+  padding-bottom: 113px;
 }
 .main-section__text-and-logo {
   display: flex;
@@ -37,7 +37,7 @@
   margin-bottom: 40px;
 }
 .main-section__try-for-free {
-  margin-bottom: 80px;
+  padding-bottom: 80px;
   /* ниже значения для большого прямоугольника (превая секция) */
 }
 .main-section__reg {
@@ -49,6 +49,39 @@
   background-color: #FFFFFF;
   transform: rotate(-7deg);
   z-index: 0;
+}
+
+.logo {
+  max-width: 94px;
+  max-height: 27px;
+  width: 100%;
+  height: 100%;
+}
+.logo__header {
+  width: 100%;
+  height: 100%;
+}
+
+.finance-icons {
+  max-width: 334px;
+  max-height: 85px;
+  width: 100%;
+  height: 100%;
+}
+.finance-icons__logos {
+  width: 100%;
+  height: 100%;
+}
+
+.right-finance {
+  max-width: 1039px;
+  max-height: 627px;
+  width: 100%;
+  height: 100%;
+}
+.right-finance__img {
+  width: 100%;
+  height: 100%;
 }
 
 /* занчения для навигационного меню в первой секции */
@@ -159,24 +192,30 @@
 }
 .cash-gaps__left {
   text-align: left;
+  margin-right: 90px;
 }
 .cash-gaps__left__h3 {
   font-size: 40px;
   font-weight: 600;
   color: #000000;
   margin-bottom: 24px;
-  width: 510px;
   line-height: 120%;
 }
 .cash-gaps__left__p {
   font-size: 18px;
   font-weight: 500;
   color: rgba(78, 93, 124, 0.5019607843);
-  width: 482px;
   line-height: 120%;
 }
+.cash-gaps__right {
+  max-width: 729px;
+  max-height: 445.5px;
+  width: 100%;
+  height: 100%;
+}
 .cash-gaps__right__img {
-  width: 729px;
+  width: 100%;
+  height: 100%;
 }
 
 /* значения для второй колонки в second-section__basic-statistics (Отчеты о прибыли и убытках) */
@@ -184,10 +223,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 40px;
+}
+.reports__left {
+  max-width: 644px;
+  max-height: 444px;
+  width: 100%;
+  height: 100%;
+  margin-right: 60px;
 }
 .reports__left__img {
-  width: 644px;
+  width: 100%;
+  height: 100%;
 }
 .reports__right {
   text-align: left;
@@ -197,14 +243,12 @@
   font-weight: 600;
   color: #000000;
   margin-bottom: 24px;
-  width: 571px;
   line-height: 120%;
 }
 .reports__right__p {
   font-size: 18px;
   font-weight: 500;
   color: rgba(78, 93, 124, 0.5019607843);
-  width: 565px;
   line-height: 140%;
 }
 
@@ -213,25 +257,33 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 28px;
 }
 .profit__left {
   text-align: left;
+  margin-right: 38px;
 }
 .profit__left__h3 {
   font-size: 40px;
   font-weight: 600;
   color: #000000;
   margin-bottom: 29px;
-  width: 566px;
   line-height: 120%;
 }
 .profit__left__p {
   font-size: 18px;
   font-weight: 500;
   color: rgba(78, 93, 124, 0.5019607843);
-  width: 526px;
   line-height: 140%;
+}
+.profit__right {
+  max-width: 641px;
+  max-height: 416.7px;
+  width: 100%;
+  height: 100%;
+}
+.profit__right__img {
+  width: 100%;
+  height: 100%;
 }
 
 /* значение четвертой колонки в second-section__basic-statistics (про сокращение расходов) */
