--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -27,7 +27,7 @@ $color-for-background-calculation: #FFC736
         display: flex
         justify-content: space-between
         align-items: center
-        margin-bottom: 113px
+        padding-bottom: 113px
     &__text-and-logo
         display: flex
         justify-content: center
@@ -35,7 +35,7 @@ $color-for-background-calculation: #FFC736
     &__finance
         margin-bottom: 40px
     &__try-for-free
-        margin-bottom: 80px
+        padding-bottom: 80px
         /* ниже значения для большого прямоугольника (превая секция) */
     &__reg
         position: absolute
@@ -47,6 +47,32 @@ $color-for-background-calculation: #FFC736
         transform: rotate(-7.00deg)
         z-index: 0
 
+.logo
+    max-width: 94px
+    max-height: 27px
+    width: 100%
+    height: 100%
+    &__header
+        width: 100%
+        height: 100%
+
+.finance-icons
+    max-width: 334px
+    max-height: 85px
+    width: 100%
+    height: 100%
+    &__logos
+        width: 100%
+        height: 100%
+
+.right-finance
+    max-width: 1039px
+    max-height: 627px
+    width: 100%
+    height: 100%
+    &__img
+        width: 100%
+        height: 100%
 /* занчения для навигационного меню в первой секции */
 .navigation
     &__ul
@@ -130,31 +156,40 @@ $color-for-background-calculation: #FFC736
     align-items: center
     &__left
         text-align: left
+        margin-right: 90px
         &__h3
             font-size: 40px
             font-weight: 600
             color: #000000
             margin-bottom: 24px
-            width: 510px
             line-height: 120%
         &__p
             font-size: 18px
             font-weight: 500
             color: $color-for-statistics
-            width: 482px
             line-height: 120%
     &__right
+        max-width: 729px
+        max-height: 445.5px
+        width: 100%
+        height: 100%
         &__img
-            width: 729px
+            width: 100%
+            height: 100%
 /* значения для второй колонки в second-section__basic-statistics (Отчеты о прибыли и убытках) */
 .reports
     display: flex
     justify-content: center
     align-items: center
-    gap: 40px
     &__left
+        max-width: 644px
+        max-height: 444px
+        width: 100%
+        height: 100%
+        margin-right: 60px
         &__img
-            width: 644px
+            width: 100%
+            height: 100%
     &__right
         text-align: left
         &__h3
@@ -162,35 +197,39 @@ $color-for-background-calculation: #FFC736
             font-weight: 600
             color: #000000
             margin-bottom: 24px
-            width: 571px
             line-height: 120%
         &__p
             font-size: 18px
             font-weight: 500
             color: $color-for-statistics
-            width: 565px
             line-height: 140%
 /* значение третьей колонки в second-section__basic-statistics (товары и прибыль) */
 .profit
     display: flex
     justify-content: center
     align-items: center
-    gap: 28px
     &__left
         text-align: left
+        margin-right: 38px
         &__h3
             font-size: 40px
             font-weight: 600
             color: #000000
             margin-bottom: 29px
-            width: 566px
             line-height: 120%
         &__p
             font-size: 18px
             font-weight: 500
             color: $color-for-statistics
-            width: 526px
             line-height: 140%
+    &__right
+        max-width: 641px
+        max-height: 416.7px
+        width: 100%
+        height: 100%
+        &__img
+            width: 100%
+            height: 100%
 /* значение четвертой колонки в second-section__basic-statistics (про сокращение расходов) */
 .expenses
     display: flex
