--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -753,6 +753,8 @@ $color-for-background-calculation: #FFC736
         top: 200px
     &__img-index3
         position: absolute
+        top: 200px
+        right: 0px
 .reviews-header
     &__h2
         text-align: center
