--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -46,10 +46,12 @@ html {
 }
 .main-section__reg {
   position: absolute;
-  width: 105%;
+  max-width: 2332.12px;
+  max-height: 312px;
+  width: 110%;
+  height: 100%;
   top: 730px;
   left: 0px;
-  height: 312px;
   background-color: #FFFFFF;
   transform: rotate(-7deg);
   z-index: 0;
@@ -1016,4 +1018,15 @@ html {
   display: flex;
   align-items: center;
   gap: 24px;
+}
+
+@media (max-width: 1199px) {
+  .container {
+    width: 960px;
+  }
+}
+@media (max-width: 991px) {
+  .container {
+    width: 720px;
+  }
 }/*# sourceMappingURL=style.css.map */
