--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -42,10 +42,12 @@ html
         /* ниже значения для большого прямоугольника (превая секция) */
     &__reg
         position: absolute
-        width: 105%
+        max-width: 2332.12px
+        max-height: 312px
+        width: 110%
+        height: 100%
         top: 730px
         left: 0px
-        height: 312px
         background-color: #FFFFFF
         transform: rotate(-7.00deg)
         z-index: 0
@@ -827,5 +829,19 @@ html
         align-items: center
         gap: 24px
 
- 
+@media (max-width: 1199px )
+    .container
+        width: 960px
+
+@media (max-width: 991px )
+    .container
+        width: 720px
+
+@media (max-width:  767px )
+    .container
+        540px
+
+@media (max-width: 575px)
+    .container
+        width: 100%
     
