--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -839,7 +839,7 @@ html
 
 @media (max-width:  767px )
     .container
-        540px
+        width: 540px
 
 @media (max-width: 575px)
     .container
