--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -935,6 +935,9 @@ html {
 }
 .eighth-section__img-index1 {
   position: absolute;
+  max-width: 640px;
+  max-height: 640px;
+  width: 100%;
   top: 0px;
   left: 580px;
   z-index: 1;
@@ -1194,6 +1197,80 @@ html {
 @media (max-width: 991px) {
   .container {
     width: 720px;
+  }
+  .personal-account__button {
+    padding: 6px 16px;
+  }
+  .navigation__ul {
+    align-items: center;
+    gap: 20px;
+  }
+  .navigation__ul a {
+    font-size: 15px;
+  }
+  .main-section__finance {
+    margin-bottom: 20px;
+  }
+  .finance-text__h2 {
+    font-size: 20px;
+  }
+  .try-for-free__button {
+    padding: 5px 12px;
+  }
+  .main-section__try-for-free {
+    padding-bottom: 30px;
+  }
+  .main-section__reg {
+    top: 386px;
+  }
+  .functions_items {
+    font-size: 17px;
+  }
+  .functions__flex {
+    gap: 50px;
+  }
+  .expenses__left__img-small {
+    left: 107px;
+    bottom: 93px;
+  }
+  .expenses {
+    gap: 162px;
+  }
+  .time-saving__intermediate-level__dop {
+    max-width: 370px;
+  }
+  .time-saving__intermediate-level__gop {
+    left: 321px;
+    top: 187px;
+  }
+  .excel__li__p {
+    font-size: 15px;
+  }
+  .finio__li__p {
+    font-size: 15px;
+  }
+  .customer-support__right-wrapper__h3 {
+    font-size: 30px;
+  }
+  .customer-support__right-wrapper__p {
+    margin-bottom: 35px;
+  }
+  .subscriptions {
+    flex-wrap: wrap;
+  }
+  .subscriptions__items {
+    margin-bottom: 20px;
+  }
+  .subscriptions__items:last-child {
+    margin: 0px;
+  }
+  .reviews-main__text {
+    padding-left: 48px;
+  }
+  .eighth-section__img-index1 {
+    max-width: 446px;
+    width: 100%;
+    left: 369px;
   }
 }
 @media (max-width: 767px) {
