--- a/final/src/css/style.css
+++ b/final/src/css/style.css
@@ -1277,7 +1277,185 @@ html {
   .container {
     width: 540px;
   }
+  .navigation {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    height: 100vh;
+    width: 50%;
+    background: green;
+    z-index: 20;
+    transition: 0.6s all;
+  }
+  .navigation__ul {
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+  }
+  .navigation__ul a {
+    font-size: 20px;
+  }
+  .personal-account {
+    display: none;
+  }
+  .hamburger {
+    width: 30px;
+    height: 14px;
+    z-index: 30;
+  }
+  .hamburger span {
+    height: 2px;
+    width: 100%;
+    display: block;
+    margin-bottom: 4px;
+    background: #FFFFFF;
+    transition: 1s all;
+  }
+  .hamburger span:last-child {
+    margin: 0px;
+  }
+  .hamburger_active span {
+    margin-bottom: -2px;
+  }
+  .hamburger_active span:nth-child(1) {
+    transform: translateY(3px) rotate(-45deg);
+  }
+  .hamburger_active span:nth-child(2) {
+    display: none;
+  }
+  .hamburger_active span:nth-child(3) {
+    transform: translateY(3px) rotate(45deg);
+  }
+  .navigation_active {
+    right: 0px;
+  }
+  .right-finance {
+    display: none;
+  }
+  .functions__flex {
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+  .functions_items {
+    font-size: 25px;
+  }
+  .finance-text__h2 {
+    font-size: 31px;
+  }
+  .try-for-free__button {
+    padding: 12px 32px;
+  }
+  .main-section__header {
+    padding-bottom: 50px;
+  }
+  .main-section__reg {
+    top: 400px;
+  }
+  .second-section__functions {
+    margin-bottom: 80px;
+  }
+  .cash-gaps {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+    gap: 30px;
+  }
+  .cash-gaps__left {
+    text-align: center;
+    margin-right: 0px;
+  }
+  .cash-gaps__left__h3 {
+    font-size: 32px;
+  }
+  .cash-gaps__left__p {
+    font-size: 18px;
+  }
+  .reports {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .reports__right {
+    text-align: center;
+  }
+  .reports__right__h3 {
+    font-size: 32px;
+  }
+  .reports__right__p {
+    font-size: 18px;
+  }
+  .profit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+  .profit__left {
+    text-align: center;
+    margin-right: 0px;
+  }
+  .profit__left__h3 {
+    font-size: 32px;
+  }
+  .profit__left__p {
+    font-size: 18px;
+  }
+  .expenses {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  .expenses__right {
+    text-align: center;
+  }
+  .expenses__right__h3 {
+    font-size: 32px;
+  }
+  .expenses__right__p {
+    font-size: 18px;
+  }
+  .expenses__left__img-small {
+    max-width: 325px;
+    left: 204px;
+    bottom: 142px;
+  }
 }
+.time-saving__upper-level__h3 {
+  font-size: 36px;
+}
+
+.time-saving__upper-level__p {
+  font-size: 18px;
+}
+
+.time-saving__upper-level__button {
+  padding: 12px 32px;
+}
+
+.time-saving__intermediate-level__dop {
+  max-width: 276px;
+}
+
+.time-saving__intermediate-level__gop {
+  left: 227px;
+  top: 121px;
+}
+
+.advantages-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 78px;
+  flex-wrap: wrap;
+}
+
 @media (max-width: 575px) {
   .container {
     width: 100%;
