--- a/final/src/sass/style.sass
+++ b/final/src/sass/style.sass
@@ -1133,8 +1133,8 @@ html
             &__p
                 font-size: 18px
     .expenses__left__img-small
-        max-width: 325px
-        left: 204px
+        max-width: 296px
+        left: 216px
         bottom: 142px
 
 .time-saving__upper-level__h3
@@ -1155,6 +1155,32 @@ html
     align-items: center
     gap: 78px
     flex-wrap: wrap
+.customer-support 
+    display: flex
+    align-items: center
+    justify-content: space-evenly
+    gap: 31px
+    flex-direction: column-reverse
+    &__right-wrapper__h3
+        font-size: 36px
+    &__right-wrapper__p
+        margin-bottom: 18px
+    &__right-wrapper__footer-p
+        font-size: 18px
+.tariffs__title__h3 
+    font-size: 36px
+.tariffs__title__p 
+    font-size: 17px
+.customer-support__right-wrapper 
+    padding-top: 64px
+    
+    
+    
+.flex-top 
+    gap: 11px
+.flex-top__item 
+    font-size: 13px
+    
 
 @media (max-width: 575px)
     .container
